# my_task

./: CMakeLists.txt  README.md
Python Code/: my_task.ipynb
my_task/: CMakeLists.txt  my_task.cpp  my_task.h
